Added editing function using designer.

--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -49,8 +49,8 @@
     <DocumentationFile>bin\Release-Eng\Ong.Friendly.FormsStandardControls.Generator.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Codeer.TestAssistant.GeneratorToolKit, Version=3.8.0.0, Culture=neutral, PublicKeyToken=f7af39ab9bcf13fe, processorArchitecture=MSIL">
-      <HintPath>..\packages\Codeer.TestAssistant.GeneratorToolKit.3.8.0\lib\net20\Codeer.TestAssistant.GeneratorToolKit.dll</HintPath>
+    <Reference Include="Codeer.TestAssistant.GeneratorToolKit, Version=3.9.0.0, Culture=neutral, PublicKeyToken=f7af39ab9bcf13fe, processorArchitecture=MSIL">
+      <HintPath>..\packages\Codeer.TestAssistant.GeneratorToolKit.3.9.0\lib\net20\Codeer.TestAssistant.GeneratorToolKit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
@@ -60,6 +60,7 @@
     <Compile Include="CreateDriver\AnalyzeMenu.cs" />
     <Compile Include="CreateDriver\CollectionUtility.cs" />
     <Compile Include="CreateDriver\ControlAndFieldName.cs" />
+    <Compile Include="CreateDriver\ControlPicker.cs" />
     <Compile Include="CreateDriver\DriverCreatorUtils.cs" />
     <Compile Include="CreateDriver\DriverDesigner.cs" />
     <Compile Include="CreateDriver\DriverElementNameGeneratorAdaptor.cs" />
