--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CreateDriver\AnalyzeMenu.cs" />
     <Compile Include="CreateDriver\CollectionUtility.cs" />
     <Compile Include="CreateDriver\ControlAndFieldName.cs" />
+    <Compile Include="CreateDriver\ControlDriverCreater.cs" />
     <Compile Include="CreateDriver\ControlPicker.cs" />
     <Compile Include="CreateDriver\DriverCreatorUtils.cs" />
     <Compile Include="CreateDriver\DriverDesigner.cs" />
@@ -68,7 +69,6 @@
     <Compile Include="CreateDriver\DriverTypeNameManager.cs" />
     <Compile Include="CreateDriver\ReflectionAccessor.cs" />
     <Compile Include="CreateDriver\WindowUtilityInTarget.cs" />
-    <Compile Include="CreateDriver\WinFormsDriverCreator.cs" />
     <Compile Include="FormsButtonGenerator.cs" />
     <Compile Include="FormsCheckBoxGenerator.cs" />
     <Compile Include="FormsCheckedListBoxGenerator.cs" />
