Stay compatible for some time

--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CreateDriver\DriverTypeNameManager.cs" />
     <Compile Include="CreateDriver\ReflectionAccessor.cs" />
     <Compile Include="CreateDriver\WindowUtilityInTarget.cs" />
+    <Compile Include="CreateDriver\WinFormsDriverCreator.cs" />
     <Compile Include="FormsButtonGenerator.cs" />
     <Compile Include="FormsCheckBoxGenerator.cs" />
     <Compile Include="FormsCheckedListBoxGenerator.cs" />
