--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -53,8 +53,10 @@
       <HintPath>..\packages\Codeer.TestAssistant.GeneratorToolKit.3.9.0\lib\net20\Codeer.TestAssistant.GeneratorToolKit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateDriver\AnalyzeMenu.cs" />
@@ -67,6 +69,12 @@
     <Compile Include="CreateDriver\DriverInfo.cs" />
     <Compile Include="CreateDriver\DriverTypeNameManager.cs" />
     <Compile Include="CreateDriver\ReflectionAccessor.cs" />
+    <Compile Include="CreateDriver\TypeSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateDriver\TypeSelectForm.Designer.cs">
+      <DependentUpon>TypeSelectForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateDriver\WindowUtilityInTarget.cs" />
     <Compile Include="CreateDriver\WinFormsDriverCreator.cs" />
     <Compile Include="FormsButtonGenerator.cs" />
@@ -102,6 +110,11 @@
     <Content Include="Ong.Friendly.FormsStandardControls.Generator.Plugin.xml">
       <SubType>Designer</SubType>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CreateDriver\TypeSelectForm.resx">
+      <DependentUpon>TypeSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
