--- a/Project/Test/Scenario/packages.config
+++ b/Project/Test/Scenario/packages.config
@@ -3,5 +3,6 @@
   <package id="Codeer.Friendly" version="2.6.1" targetFramework="net45" />
   <package id="Codeer.Friendly.Windows" version="2.15.0" targetFramework="net45" />
   <package id="Codeer.Friendly.Windows.Grasp" version="2.12.0" targetFramework="net45" />
+  <package id="Codeer.Friendly.Windows.KeyMouse" version="1.3.14" targetFramework="net45" />
   <package id="Codeer.TestAssistant.GeneratorToolKit" version="3.9.0" targetFramework="net45" />
 </packages>
