ControlDriver作成時のダイアログの表示内容を調整

--- a/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
+++ b/Project/Src/Ong.Friendly.FormsStandardControls.Generator/Ong.Friendly.FormsStandardControls.Generator.csproj
@@ -64,17 +64,29 @@
     <Compile Include="CreateDriver\CollectionUtility.cs" />
     <Compile Include="CreateDriver\ControlAndFieldName.cs" />
     <Compile Include="CreateDriver\ControlPicker.cs" />
+    <Compile Include="CreateDriver\DriverCodeDriverControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CreateDriver\DriverCodeDriverControl.Designer.cs">
+      <DependentUpon>DriverCodeDriverControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateDriver\DriverCodeGeneratorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CreateDriver\DriverCodeGeneratorControl.Designer.cs">
+      <DependentUpon>DriverCodeGeneratorControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateDriver\DriverCodeSettingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateDriver\DriverCodeSettingForm.Designer.cs">
+      <DependentUpon>DriverCodeSettingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateDriver\DriverCreatorUtils.cs" />
     <Compile Include="CreateDriver\DriverDesigner.cs" />
     <Compile Include="CreateDriver\DriverElementNameGeneratorAdaptor.cs" />
     <Compile Include="CreateDriver\DriverInfo.cs" />
     <Compile Include="CreateDriver\DriverTypeNameManager.cs" />
-    <Compile Include="CreateDriver\PropertyMethodSelectForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CreateDriver\PropertyMethodSelectForm.Designer.cs">
-      <DependentUpon>PropertyMethodSelectForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="CreateDriver\ReflectionAccessor.cs" />
     <Compile Include="CreateDriver\TypeSelectForm.cs">
       <SubType>Form</SubType>
@@ -114,8 +126,14 @@
     <None Include="Properties\Ong.Friendly.FormsStandardControls.Generator.snk" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CreateDriver\PropertyMethodSelectForm.resx">
-      <DependentUpon>PropertyMethodSelectForm.cs</DependentUpon>
+    <EmbeddedResource Include="CreateDriver\DriverCodeDriverControl.resx">
+      <DependentUpon>DriverCodeDriverControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateDriver\DriverCodeGeneratorControl.resx">
+      <DependentUpon>DriverCodeGeneratorControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateDriver\DriverCodeSettingForm.resx">
+      <DependentUpon>DriverCodeSettingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateDriver\TypeSelectForm.resx">
       <DependentUpon>TypeSelectForm.cs</DependentUpon>
