--- a/Project/Test/GeneratorTest/packages.config
+++ b/Project/Test/GeneratorTest/packages.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Codeer.Friendly" version="2.6.1" targetFramework="net471" />
-  <package id="Codeer.Friendly.Windows" version="2.15.0" targetFramework="net471" />
-  <package id="Codeer.Friendly.Windows.Grasp" version="2.12.0" targetFramework="net471" />
+  <package id="Codeer.Friendly.Windows" version="2.17.0" targetFramework="net471" />
+  <package id="Codeer.Friendly.Windows.Grasp" version="2.14.2" targetFramework="net471" />
   <package id="Codeer.TestAssistant.GeneratorToolKit" version="3.9.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net471" />
