--- a/Project/Test/Driver.InTarget/packages.config
+++ b/Project/Test/Driver.InTarget/packages.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Codeer.Friendly" version="2.6.1" targetFramework="net40" />
-  <package id="Codeer.Friendly.Windows" version="2.17.0" targetFramework="net40" />
-  <package id="Codeer.Friendly.Windows.Grasp" version="2.14.2" targetFramework="net40" />
+  <package id="Codeer.Friendly" version="2.7.0" targetFramework="net40" />
+  <package id="Codeer.Friendly.Windows" version="2.18.0" targetFramework="net40" />
+  <package id="Codeer.Friendly.Windows.Grasp" version="2.15.0" targetFramework="net40" />
   <package id="Codeer.TestAssistant.GeneratorToolKit" version="3.13.0" targetFramework="net40" />
 </packages>
